# gojju

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: README.md  _config.yml  api.html  index.html  index.md
examples/: fp.gj  hello.gj  pattern_matching.gj
gojju/: __init__.py  __main__.py  ast.py  builtins.py  fp.py  interpreter.py  lexer.py  parser.py  repl.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py
