[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gojju"
version = "0.1.1"
description = "A programming language combining the best of Python, Ruby, Haskell, Perl, and JavaScript"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hemanth HM", email = "hemanth.hm@gmail.com"}
]
keywords = ["programming-language", "interpreter", "repl", "gojju"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
gojju = "gojju.__main__:main"

[project.urls]
Homepage = "https://github.com/phanatic/gojju"
Repository = "https://github.com/phanatic/gojju"

[tool.setuptools.packages.find]
where = ["."]
include = ["gojju*"]
